# Vikings-Rise-Simulator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICK-START.md  README-WEB.md  README.md  package.json  railway.json  railway.toml  setup.sh  start.sh  test-api.sh  test-backend.sh
.github/workflows/: builder exe + mac.yml  cpp-tests.yml
backend/: .gitignore  Procfile  pom.xml
backend/src/main/java/com/vikingsrise/simulator/: SimulatorBackendApplication.java
backend/src/main/java/com/vikingsrise/simulator/config/: WebConfig.java
backend/src/main/java/com/vikingsrise/simulator/controller/: ReactController.java  RootController.java  SimulatorController.java
backend/src/main/java/com/vikingsrise/simulator/dto/: MarchDTO.java  SimulationConfigDTO.java  SimulationRequestDTO.java
backend/src/main/java/com/vikingsrise/simulator/service/: SimulatorService.java
backend/src/main/java/test/: Combatant.java  CombatantInfoHolder.java  Simulator.java  Skill.java  SkillDatabase.java
backend/src/main/java/test/combatrecords/: CombatRecord.java
backend/src/main/java/test/effects/: Effect.java  TimedDamageEffect.java  TimedEffect.java
backend/src/main/resources/: application.properties
backend/src/main/resources/static/: asset-manifest.json  index.html
backend/src/main/resources/static/static/js/: main.3b4552a5.js  main.3b4552a5.js.map  main.50422c6d.js  main.50422c6d.js.map  main.e0837abf.js  main.e0837abf.js.map  main.e77576ef.js  main.e77576ef.js.map  main.f4f7d4e5.js  main.f4f7d4e5.js.map
backend/src/main/resources/test/: NameAssosciatedSkillDatabase.json  SkillDatabase.json
cpp-backend-new/: .clang-format  .clang-tidy  CMakeLists.txt  compile_commands.json
cpp-backend-new/config/: settings.json
cpp-backend-new/include/: Controller.hpp  SkillParser.hpp
cpp-backend-new/include/combatants/: Combatant.hpp  Loadable.hpp  Stats.hpp  StatusController.hpp  UnitType.hpp
cpp-backend-new/include/combatants/stats/: StatRequest.hpp  Stats.hpp
cpp-backend-new/include/effects/: DirectDamageEffect.hpp  DirectEffect.hpp  DirectEffectType.hpp  EffectType.hpp  TimedEffect.hpp  TimedStatChange.hpp  Timer.hpp
cpp-backend-new/include/orchestration/: CombatPublisher.hpp  CombatantEvent.hpp  GameEvent.hpp  SetupPublisherLoader.hpp
cpp-backend-new/include/skills/: ConditionType.hpp  DamageSkill.hpp  DirectSkill.hpp  Skill.hpp  SkillCondition.hpp  SkillGrouping.hpp  SkillTarget.hpp  SkillType.hpp  StatusSkill.hpp
cpp-backend-new/include/utils/: CombatantSetup.hpp  CommanderName.hpp  MountSlot1Names.hpp  MountSlot2Names.hpp  NumberGenerator.hpp  NumberGeneratorFactory.hpp  ScalarUtils.hpp  SkillName.hpp  SkillParser.hpp
cpp-backend-new/resources/: skills.json
cpp-backend-new/scripts/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run.sh  run_tests.sh
cpp-backend-new/scripts/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp-backend-new/src/: controller.hpp  main
cpp-backend-new/src/combatants/: Combatant.cpp  Combatant.hpp  CombatantStats.hpp  StatusController.cpp  StatusController.hpp  StatusManager.hpp  combatant.cpp  combatant.hpp  stats.hpp
cpp-backend-new/src/combatants/stats/: Stats.cpp
cpp-backend-new/src/effects/: DirectDamageEffect.hpp  EffectType.hpp  EffectTypes.hpp  README.md  StatusEffect.cpp  StatusEffect.hpp  TimedEffect.cpp  TimedEffect.hpp  TimedStatChange.cpp  Timer.cpp  Timer.hpp  effect_types.cpp  effect_types.hpp  status_effect.cpp  status_effect.hpp  timed_effect.cpp  timed_effect.hpp  timer.cpp  timer.hpp
cpp-backend-new/src/main.dSYM/Contents/Resources/DWARF/: main
cpp-backend-new/src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
cpp-backend-new/src/orchestration/: CombatEvents.hpp  CombatPublisher.cpp  CombatPublisher.hpp  CombatantEvents.hpp  GameEvent.hpp  SetupPublisherLoader.cpp  combat_events.hpp  combat_publisher.cpp  combat_publisher.hpp
cpp-backend-new/src/skills/: DamageSkill.cpp  DamageSkill.hpp  DirectSkill.cpp  ISkill.hpp  NumberGenerator.cpp  Skill.cpp  Skill.hpp  SkillCondition.cpp  SkillCondition.hpp  SkillGrouping.cpp  StatusSkill.cpp  StatusSkill.hpp  skill.cpp  skill.hpp  skill_types.hpp
cpp-backend-new/src/utils/: NumberGenerator.cpp  NumberGeneratorFactory.cpp  ScalarUtils.cpp  ScalarUtils.hpp  SkillParser.cpp
cpp-backend-new/tests/: CMakeLists.txt  TestSkillParser.cpp  TestStatusEffect.cpp  TestTimedEffect.cpp  TestTimer.cpp  test_status_effect.cpp  test_timed_effect.cpp  test_timer.cpp
demo/: .gitignore  dependency-reduced-pom.xml  performance_test.sh  pom.xml
demo/src/main/java/test/: CombatRecord.java  Combatant.java  CombatantInfo.java  CombatantInfoHolder.java  DebuffEffectCollection.java  NameAssosciatedSkillDatabase.json  PathDebugTool.java  Simulator.java  Skill.java  SkillDatabase.java  SkillDatabase.json
demo/src/main/java/test/combatrecords/: CombatRecord.java  CombatRecordOverview.java
demo/src/main/java/test/gui/: EnemyDummyPanel.java  IMarchPanel.java  MarchPanel.java  PlotlyHistogram.java  SimulatorGUI.java
demo/src/main/resources/test/: NameAssosciatedSkillDatabase.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  App_clean.tsx  api.ts  react-plotly.d.ts  styled.ts  types.ts
frontend/src/components/: March.tsx  PlotModal.tsx  SimulationPanel.tsx
